two fixes - margin to padding for content div and add z-index to navmenu div

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,9 +3,8 @@
 
 @import "jekyll-theme-slate";
 
-#main {
-  margin-top: 40px;
-  display: block;
+.mycontent {
+  padding-top: 40px;
 }
 
 .navmenu{
@@ -15,6 +14,7 @@
   width: 100%;
   height: 40px;
   background:#212121;
+  z-index: 1000;
 }
 
 .navmenu ul {
